adding scaling and translate API

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         const canvas = document.getElementById('castle');
         const ctx = canvas.getContext('2d');
-        draw(ctx);
+        draw(ctx, { position: { x: 100, y: 100 }, scaleX: 0.5, scaleY: 0.5 });
     </script>
 </body>
 </html>
